GNOME Bugzilla – Bug 703576
Asks about unfinished downloads when one fails
Last modified: 2014-08-27 23:53:35 UTC
Created attachment 248354 [details] [review] Set downloads that fail as finished When closing the window a dialog will be shown asking about unfinished downloads when a download fails.
Review of attachment 248354 [details] [review]: Sure.
Attachment 248354 [details] pushed as 628dd3d - Set downloads that fail as finished
Garrett, was this the same dialog as in bug #721727?