Set downloads that fail as finished

Otherwise we will show a dialog when closing the window
about unfinished downloads.

https://bugzilla.gnome.org/show_bug.cgi?id=703576